# brewer

./: .gitignore  Cargo.toml  README.md  justfile
brewer_core/: Cargo.toml
brewer_core/src/: lib.rs  models.rs
brewer_engine/: Cargo.toml
brewer_engine/src/: lib.rs  store.rs
brewer_term/: Cargo.toml
brewer_term/src/: cli.rs  main.rs  pretty.rs  settings.rs
