[package]
name = "brewer_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
brewer_core = { path = "../brewer_core" }
jammdb = "0.11.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.201", features = ["derive"] }
rmp-serde = "1.3.0"
derive_builder = "0.20.0"