[package]
name = "brewer_term"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "brewer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.83"
brewer_engine = { path = "../brewer_engine" }
brewer_core = { path = "../brewer_core" }
clap = { version = "4.5.4", features = ["derive"] }
anstyle = "1.0.7"
prettytable-rs = "^0.10"
terminal_size = "0.3.0"