[package]
name = "brewer_term"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "brewer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.83"
brewer_engine = { path = "../brewer_engine" }
brewer_core = { path = "../brewer_core" }
clap = { version = "4.5.4", features = ["derive"] }
prettytable-rs = "^0.10"
terminal_size = "0.3.0"
skim = "0.10.4"
textwrap = "0.16.1"
colored = "2.1.0"
nucleo-matcher = "0.3.1"
dirs = "5.0.1"
serde = { version = "1.0.201", features = ["derive"] }
config = { version = "0.14.0", features = ["toml"] }
open = "5.1.2"
inquire = "0.7.5"
log = "0.4.22"
env_logger = "0.11.6"
clap-verbosity = "2.1.0"

